--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
 <!-- All of the following is loaded within the index.html app-root tags -->
-
-  <header class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+<body>
+  <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
     <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" (click)="navbarCollapsed = !navbarCollapsed" [attr.aria-expanded]="!navbarCollapsed" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Grim Pack</a>
+    <a class="navbar-brand" routerLink="/home">Grim Pack</a>
 
     <div class="collapse navbar-collapse" [ngbCollapse]="navbarCollapsed" id="navbarContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" routerLink="/about">About</a>
         </li>
         <li ngbDropdown class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="partDropDown" ngbDropdownToggle>Parts</a>
+          <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="partDropDown" ngbDropdownToggle>Parts</a>
           <ul class="dropdown-menu" aria-labelledby="partDropDown">
-            <li *ngFor="let part of parts">
-              <a class="dropdown-item" href="#">{{part.name}}</a>
+            <li *ngFor="let part of partService.getParts()">
+              <a class="dropdown-item" routerLink="/part/{{part.shortName}}">{{part.name}}</a>
             </li>
           </ul>
         </li>
@@ -27,46 +27,18 @@
       </form>
     </div>
     </div>
-    </header>
+  </nav>
 
 
 <!-- Anchor for the top -->
 <a id="top"></a>
 
-<body>
-  <!-- Main jumbotron for a primary marketing message or call to action -->
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">Grim Pack!</h1>
-      <p></p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="container">
-    <!-- Example row of columns -->
-    <div class="row">
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-     </div>
-      <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div>
-    </div>
-  </div>
-</body>
+<!-- Don't assume we want this to automatically be contained in a container -->
+<router-outlet></router-outlet>
 
       <footer class="bd-footer text-muted">
         <div class="container">
         <p>&copy; Company 2017</p>
       </div>
       </footer>
+    </body>
