--- a/src/app/part/core/core.component.html
+++ b/src/app/part/core/core.component.html
@@ -1,3 +1,6 @@
 <p>
-  core works!
+  Grim Core is more of a utilty to the other parts than containing new things.
 </p>
+
+<a id="instruction_manual"></a>
+<app-instruction-manual></app-instruction-manual>
