Start on adding soda page.

--- a/src/app/part/cuisine/cuisine.component.html
+++ b/src/app/part/cuisine/cuisine.component.html
@@ -1,3 +1,4 @@
+<!-- TODO: Add image here all about cuisine -->
 <p>
-  cuisine works!
+  Cuisine is all about food and ways to make food. In it's current state there are pies, health restore items, chocolate, sandwiches and more.
 </p>
