Add in more cuisine info. Pretty much done just need some info on Cuisine's main page.

--- a/src/app/part/cuisine/sections/soda.component.html
+++ b/src/app/part/cuisine/sections/soda.component.html
@@ -15,11 +15,29 @@
   <li>Slurm – 1.5H</li>
 </ul>
 
+<h4>Crafting:</h4>
 <p>
   You will first need the bottles, CO2, and carbonated water.
 </p>
 
-<img src="http://img.mod-minecraft.net/Mods/Soda-Mod-2.jpg">
-<img src="http://img.mod-minecraft.net/Mods/Soda-Mod-3.jpg">
-<img src="http://img.mod-minecraft.net/Mods/Soda-Mod-4.jpg">
-<img src="http://img.mod-minecraft.net/Mods/Soda-Mod-5.jpg">
+<img src="http://i.imgur.com/Yh9b8zM.jpg" class="img-fluid">
+<img src="http://i.imgur.com/tfn1FWu.jpg" class="img-fluid">
+<img src="http://i.imgur.com/LD7ESkI.jpg" class="img-fluid">
+
+<p>
+  Then you can start making the different flavors of soda.
+</p>
+<img src="http://i.imgur.com/T7wb2Ep.jpg" class="img-fluid">
+<img src="http://i.imgur.com/xmgT3il.jpg" class="img-fluid">
+<img src="http://i.imgur.com/pYA1qYq.jpg" class="img-fluid">
+<img src="http://i.imgur.com/g1HuITV.jpg" class="img-fluid">
+<img src="http://i.imgur.com/bi3MIoE.jpg" class="img-fluid">
+<img src="http://i.imgur.com/aQ7iIUx.jpg" class="img-fluid">
+<img src="http://i.imgur.com/XNS4aZt.jpg" class="img-fluid">
+<img src="http://i.imgur.com/QMQvvS1.jpg" class="img-fluid">
+<img src="http://i.imgur.com/JiCGRVw.jpg" class="img-fluid">
+
+<p>
+  And you can also make Soda that hurts whoever drinks it!
+</p>
+<img src="http://i.imgur.com/8HQ2WBA.jpg" class="img-fluid">
