--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,21 @@
 <!-- Display title -->
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">About</h1>
-    </div>
-  </div>
-
+<div class="jumbotron">
   <div class="container">
-    <a href="#copyright"></a>
-    <h2 class="text-center">Copyright</h2>
-    <p>These mods are Copyright(2017) and are my intellectual property, and the property of the original creators whose work I have updated. Both minecraftforum.net, grim3212.github.io, grim3212.com are allowed to host my material. My material may not be distributed publicly through any other website without advanced written permission. Public mod packs may include my mods without seeking my permission. You are free to use my material in Let's Plays without seeking my permission.</p>
+    <h1 class="display-3">About</h1>
   </div>
+</div>
+
+<div class="container">
+  <h3>FAQ</h3>
+  <ul>
+    <li>Why do some recipes have green and yellow around the items?</li>
+    <li>This is because they are taken straight out of the Instruction Manual. Green means that the recipe is shapeless and an item with yellow around it means that it is OreDictionaried.
+  </ul>
+</div>
+
+<div class="container">
+  <a href="#copyright"></a>
+  <h2 class="text-center">Copyright</h2>
+  <p>These mods are Copyright(2017) and are my intellectual property, and the property of the original creators whose work I have updated. Both minecraftforum.net, grim3212.github.io, grim3212.com are allowed to host my material. My material may not be
+    distributed publicly through any other website without advanced written permission. Public mod packs may include my mods without seeking my permission. You are free to use my material in Let's Plays without seeking my permission.</p>
+</div>
