Add in more information for decor and cuisine

--- a/src/app/part/cuisine/sections/chocolate.component.html
+++ b/src/app/part/cuisine/sections/chocolate.component.html
@@ -9,10 +9,12 @@
   use bonemeal on it.
 </p>
 
+<a id="mould"></a>
 <h4>Chocolate Bar Mould</h4>
 <img src="https://i0.wp.com/i.imgur.com/ShWtGhF.jpg" class="img-fluid">
 <p>Recipe: 3 Cobblestone and 2 Smoothstone. What you use to mould and create the Chocolate Bars.</p>
 
+<a id="cooking"></a>
 <h4>Making Chocolate</h4>
 <ol>
   <li>Collect cocoa fruits from cocoa trees.</li>
@@ -20,15 +22,16 @@
   <img src="https://i0.wp.com/i.imgur.com/E9Yj3WL.jpg" class="img-fluid"><img src="https://i0.wp.com/i.imgur.com/In6u3Wf.jpg" class="img-fluid">
   <li>Make Chocolate Milk:</li>
   <img src="https://i0.wp.com/i.imgur.com/S3gUgRf.jpg" class="img-fluid">
-  Recipe: 3 Cocoa Dusts, 1 Sugar and 1 Bucket of Milk.
+  <p>Recipe: 3 Cocoa Dusts, 1 Sugar and 1 Bucket of Milk.
   <strong>The Bucket of Milk can use vanilla and any OreDictionaried as 'bucketMilk' like the
-    <a routerLink="/part/tools/better_buckets">Better Buckets</a>
-    in the GrimPack</strong>
+    <a pageScroll href="#milk" [routerLink]="['/part/tools/better_buckets']">Better Buckets</a>
+    in the GrimPack</strong></p>
 
   <li>Smelt Chocolate Milk into Hot Chocolate Milk:</li>
   <img src="https://i0.wp.com/i.imgur.com/xh3chI6.jpg" class="img-fluid">
 </ol>
 
+<a id="chocolate_bars"></a>
 <h4>Making Chocolate Bars</h4>
 <ol>
   <li>Craft a Chocolate Bar Mould</li>
@@ -47,15 +50,17 @@
 <h4>Craft a Candy Wrapper</h4>
 <h5>Recipe Shapeless – One Lapis Lazuli and One Piece of Paper</h5>
 <img src="https://i0.wp.com/i.imgur.com/8IfTijL.jpg" class="img-fluid"><img src="https://i0.wp.com/i.imgur.com/Il96NMB.jpg" class="img-fluid">
-<strong class="text-warning">Wraps not returned!</strong>
+<br><strong class="text-warning">Wraps not returned!</strong>
 
+<a id="cake"></a>
 <h4>Making Chocolate Cake</h4>
 <ol>
   <li>Craft two balls of chocolate.</li>
+  <p>These can also be used to make <a pageScroll href="#choc_pie" [routerLink]="['/part/cuisine/cooking']">chocolate pie</a>.</p>
   <img src="https://i0.wp.com/i.imgur.com/rWOOcXh.jpg" class="img-fluid">
   <li>Make the cake.</li>
   <img src="https://i0.wp.com/i.imgur.com/y9CgQkw.jpg" class="img-fluid">
-  Recipe: 2 Chocolate Balls, 1 Milk(bucket or bowl), 2 Sugar, 1 Egg and 3 Wheat.
+  <p>Recipe: 2 Chocolate Balls, 1 Milk(bucket or bowl), 2 Sugar, 1 Egg and 3 Wheat.</p>
   <li>Eat! Nomonnmonomnmnomnomn</li>
   <img src="https://i0.wp.com/i.imgur.com/v4RWwvV.png" class="img-fluid">
 </ol>
