--- a/src/app/part/cuisine/sections/cooking.component.html
+++ b/src/app/part/cuisine/sections/cooking.component.html
@@ -2,6 +2,7 @@
   A few of the food items that you make are used to make some tasty treats and meals. The food can include basic cheese or butter, but can also end up being a delicious sandwich or apple pie.
 </p>
 
+<a id="utensils"></a>
 <h4>Utensils</h4>
 <p>
   Probably the first the thing that you will want to do is create some utensils to start cooking. As of right now there is only two utensils, a knife and mixer. But, if you like pie you might also want to make the Pie pan.
@@ -15,6 +16,7 @@
   After you have some utensils you might want to make some of the blocks used to make the adairy products. These include a cheese maker and a butter churn.
 </p>
 
+<a id="cheese"></a>
 <h4>Cheese Maker</h4>
 <p>
   The Cheese Maker transforms Milk into Cheese after a while. So you put Milk in it, wait some time and it’ll transform into a blocky cheese. Let’s get started: Recipe: 7 Cobblestone and 1 bucket.
@@ -37,6 +39,7 @@
   <li>Storage, slice into pieces, do anything you want with it.</li>
 </ol>
 
+<a id="butter"></a>
 <h4>Butter Churn</h4>
 <p>
   With this, you can transform one bucket of milk into two pieces of butter. Let’s get started: Recipe: 7 planks and 2 sticks.
@@ -61,8 +64,8 @@
   <li>Profit.</li>
 </ol>
 
+<a id="eggs"></a>
 <h4>Eggs</h4>
-
 <p>
   Now we that we have most of the tools and basic ingredients we can start making some food. To start off with we can cook some eggs. First you will need to pour the eggs into a bowl.
 </p>
@@ -75,6 +78,7 @@
 <img src="http://i.imgur.com/1x85aqU.png" class="img-fluid">
 <img src="http://i.imgur.com/h6w2AXT.png" class="img-fluid">
 
+<a id="sandwiches"></a>
 <h4>Sandwiches</h4>
 <p>
   Maybe eggs aren't your thing and you want something tastier. You might want to make some sandwiches. Currently the only sandwiches you can make is a cheese burger and a grilled cheese.
@@ -88,15 +92,17 @@
 <img src="http://i.imgur.com/SDdOhdq.png" class="img-fluid">
 <img src="http://i.imgur.com/6y5diJj.png" class="img-fluid">
 
+<a id="pies"></a>
 <h4>Pies</h4>
 <p>
-  Now maybe you want some dessert so now you can make some Pie. You have already made your Pie pan so the first thing you will need is a raw pie without any filling. Now you can start filling up your pie with whatever filling you want.
+  Now maybe you want some dessert so now you can make some Pie. You have already made your Pie pan so the first thing you will need is a raw pie without any filling. Now you can start filling up your pie with whatever filling you want. Also the chocolate pie uses <a pageScroll href="#cake" [pageScrollOffset]="-30" [routerLink]="['/part/cuisine/chocolate']">Chocolate</a> from Grim Pack.
 </p>
 <img src="http://i.imgur.com/qhprhYA.png" class="img-fluid">
 <img src="http://i.imgur.com/lNCezFo.png" class="img-fluid">
 <img src="http://i.imgur.com/hNndMQf.png" class="img-fluid">
 <img src="http://i.imgur.com/MPb0axM.png" class="img-fluid">
-<img src="http://i.imgur.com/mJzoOGc.png" class="img-fluid">
+
+<img id="choc_pie" src="http://i.imgur.com/mJzoOGc.png" class="img-fluid">
 <img src="http://i.imgur.com/flOsCw3.png" class="img-fluid">
 
 <p>
