More work on Decor. This includes colorizer, fireplaces, and furniture sections completed.

--- a/src/app/part/cuisine/cuisine.component.html
+++ b/src/app/part/cuisine/cuisine.component.html
@@ -1,4 +1,6 @@
-<!-- TODO: Add image here all about cuisine -->
 <p>
   Cuisine is all about food and ways to make food. In it's current state there are pies, health restore items, chocolate, sandwiches and more.
+  You can see a small selection of what is included in Cuisine below.
 </p>
+
+<img src="http://i.imgur.com/zHy4Q2e.png" class="img-fluid">
