--- a/src/app/part/decor/decor.component.html
+++ b/src/app/part/decor/decor.component.html
@@ -1,3 +1,5 @@
 <p>
-  decor works!
+  Decor contains many different options to decorate your Minecraft world with. A small selection is shown below. Many of decors blocks are able to colorized so that they can take on the texture of many different blocks.
 </p>
+
+<img src="http://i.imgur.com/LG04ioo.png" class="img-fluid">
