--- a/src/app/part/decor/sections/colorizer.component.html
+++ b/src/app/part/decor/sections/colorizer.component.html
@@ -1,3 +1,34 @@
 <p>
-  The majority of Grim Decor is blocks that can be colored to look like many other blocks. All of these are colorizer blocks and require some base materials to make first.
+  The majority of Grim Decor is blocks that can be colored to look like many other blocks. All of these are colorizer blocks and require some base materials to make first. All colorizer blocks work the same with dying and clearing. You can right click
+  with a block in hand to paint it and to clear either break it or use a brush. There are two modes in the config. 'Colorizers Consume Block' this option allows you to change if colorizers consume blocks when painted, true for this false for free
+  paints.
 </p>
+
+<a id="hardened_wood"></a>
+<h4>Hardened Wood</h4>
+<p>
+  This is used in the construction of colorizer blocks. This acts as a harder wood that can then be influenced easily with dyes.
+</p>
+<img src="http://i.imgur.com/XYBEEke.png" class="img-fluid">
+<br>
+<a id="colorizer"></a>
+<h4>Colorizer</h4>
+<p>
+  The colorizer allows it to take on the texture of many different types of blocks. Once crafted simply right click on it with a compatible block and it should change right away. To clear the texture you can break it and replace it or craft a
+  <a pageScroll href="#brush" [routerLink]="['/part/decor/colorizer']">brush</a>.
+</p>
+<img src="http://i.imgur.com/WFUKKLc.png" class="img-fluid">
+<br>
+<a id="colorizer_light"></a>
+<h4>Colorizer Light</h4>
+<p>
+  This has the same properties of a colorizer except that it emits light.
+</p>
+<img src="http://i.imgur.com/L7wI2O8.png" class="img-fluid">
+<br>
+<a id="brush"></a>
+<h4>Brush</h4>
+<p>
+  The brush is used to clear a colorizer. This works for any colorizeable block and in both modes. So, where it consumes an item and where it doesn't.
+</p>
+<img src="http://i.imgur.com/8GHojDB.png" class="img-fluid">
