--- a/src/app/part/decor/sections/decoration.component.html
+++ b/src/app/part/decor/sections/decoration.component.html
@@ -23,13 +23,16 @@
 <p>
   The following decorations can do special things.
 </p>
+<a id="clay_pot"></a>
 <p><strong>Clay Pot:</strong></p>
 <p>
   The clay pot can be right clicked to change the top texture and then you can plant any plant that is able to be planted on the top texture so if it is soul sand you can plant netherwart.
+  Clay pot will change shape if a <a pageScroll href="#stool" [routerLink]="['/part/decor/furniture']">stool</a> is underneath them.
 </p>
 <img src="http://i.imgur.com/R87lYv2.png" class="img-fluid">
 <img src="http://i.imgur.com/FKmcqXH.png" class="img-fluid">
 <img src="http://i.imgur.com/oEGHWF3.png" class="img-fluid">
+<img src="http://i.imgur.com/f1aeZdx.png" class="img-fluid">
 <p><strong>Clay Decorations:</strong></p>
 <p>
   Both clay decorations and bone decorations can be right clicked to chagne the texture and for decoration only.
