--- a/src/app/part/decor/sections/furniture.component.html
+++ b/src/app/part/decor/sections/furniture.component.html
@@ -1,3 +1,84 @@
 <p>
-  Decor adds in a wide variety of furniture to your world. Each of these can be colored to look like many different blocks.
+  Decor adds in a wide variety of furniture to your world. Each of these can be colored to look like many different blocks. These blocks all function the same way as <a pageScroll href="#colorizer" [routerLink]="['/part/decor/colorizer']">basic colorizer</a> blocks.
 </p>
+
+<a id="table"></a>
+<h4>Tables</h4>
+<p>
+  These tables can be used as a good decoration and will attach to other tables that they are connected to.
+</p>
+<img src="http://i.imgur.com/0m5pCHa.png" class="img-fluid">
+<img src="http://i.imgur.com/r1RmFo9.png" class="img-fluid">
+<br>
+
+<a id="chair"></a>
+<h4>Chairs</h4>
+<p>
+  Currently chairs are only for decoration. You can't sit or anything at the moment but it is a planned feature. Chairs can be placed in all four different directions.
+</p>
+<img src="http://i.imgur.com/uFk6qTn.png" class="img-fluid">
+<img src="http://i.imgur.com/K3s4XFA.png" class="img-fluid">
+<br>
+
+<a id="stool"></a>
+<h4>Stools</h4>
+<p>
+  Stools are small seats that again are decoration only at the moment. Stools will change shape if a <a pageScroll href="#clay_pot" [routerLink]="['/part/decor/decoration']">Clay Pot</a> is on them.
+</p>
+<img src="http://i.imgur.com/tiF6nFE.png" class="img-fluid">
+<img src="http://i.imgur.com/f1aeZdx.png" class="img-fluid">
+<br>
+
+<a id="wall"></a>
+<h4>Walls</h4>
+<p>
+  These walls act as vanilla walls but with the ability to be colorized.
+</p>
+<img src="http://i.imgur.com/AVmWxBB.png" class="img-fluid">
+<img src="http://i.imgur.com/AV0XOOy.png" class="img-fluid">
+<br>
+
+<a id="doors"></a>
+<h4>Doors</h4>
+<p>
+  These are like vanilla doors except can be colorized.
+</p>
+<img src="http://i.imgur.com/X2lTx3C.png" class="img-fluid">
+<img src="http://i.imgur.com/OrvX99a.png" class="img-fluid">
+<br>
+
+<a id="lamp_post"></a>
+<h4>Lamp Posts</h4>
+<p>
+  These are 3 block high lamp posts that emit light from the top block. They are useful for street lamps and look very nice.
+</p>
+<img src="http://i.imgur.com/C08aOMN.png" class="img-fluid">
+<img src="http://i.imgur.com/YeCXubZ.png" class="img-fluid">
+<br>
+
+<a id="counter"></a>
+<h4>Counters</h4>
+<p>
+  These are basically the top half of a table that floats. It doesn't really have much of a use other than decoration.
+</p>
+<img src="http://i.imgur.com/ATEyiI0.png" class="img-fluid">
+<img src="http://i.imgur.com/ur64wu7.png" class="img-fluid">
+<br>
+
+<a id="fence"></a>
+<h4>Fences</h4>
+<p>
+  These work just like vanilla fences except they can be colorized.
+</p>
+<img src="http://i.imgur.com/EwKvfTc.png" class="img-fluid">
+<img src="http://i.imgur.com/jR0Q7fN.png" class="img-fluid">
+<br>
+
+<a id="fence_gate"></a>
+<h4>Fence Gates</h4>
+<p>
+  These work just like vanilla fence gates except they can be colorized.
+</p>
+<img src="http://i.imgur.com/jPU9k0Q.png" class="img-fluid">
+<img src="http://i.imgur.com/GeIeDfv.png" class="img-fluid">
+<br>
