--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Padding for Jumbotrons */
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+
+  margin: 0 0 100px;
+  /* bottom = footer height */
+}
+
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+}
+
+.jumbotron {
+  background-color: #a4a4a4;
+  background: linear-gradient(135deg, #a4a4a4, #d6d6d6);
+}
