--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,14 @@
-body {
-  padding-top: 2rem;
+.bd-footer {
+  padding: 3rem 0;
+  margin-top: 3rem;
+  font-size: 85%;
+  background-color: #f7f7f7;
+  text-align: left;
+  p {
+    margin-bottom: 0;
+  }
+  a {
+    font-weight: 500;
+    color: #55595c;
+  }
 }
