--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,8 @@
       <a href="https://minecraft.curseforge.com/projects/grim-pack/files/2364763">Grim Pack-1.11.2-4.0.0.0-beta</a>
     </p>
     <a href="http://minecraft.curseforge.com/projects/grim-pack"><img src="http://cf.way2muchnoise.eu/versions/Minecraft_grim-pack_all.svg"></a>
-    <a href="http://minecraft.curseforge.com/projects/grim-pack"><img src="http://cf.way2muchnoise.eu/full_grim-pack_downloads.svg"></a>  
+    <a href="http://minecraft.curseforge.com/projects/grim-pack"><img src="http://cf.way2muchnoise.eu/full_grim-pack_downloads.svg"></a>
+    <h3>Work In Progress</h3>
   </div>
 </div>
 
