Use styles from Bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,15 @@
 
 <footer class="bd-footer text-muted">
   <div class="container">
-    <p>Copyright &copy;
-      {{year}}
-      - Dakota Pierone (Grim3212)</p>
+    <ul class="bd-footer-links">
+      <li><a href="https://github.com/grim3212/grim-pack">GitHub</a></li>
+      <li><a href="https://twitter.com/grim3212">Twitter</a></li>
+      <li><a href="https://minecraft.curseforge.com/projects/grim-pack">CurseForge</a></li>
+      <li><a routerLink="/about">FAQ</a></li>
+    </ul>
+
+    <p>Currently <a href="https://minecraft.curseforge.com/projects/grim-pack/files/2364763">Grim Pack-1.11.2-4.0.0.0-beta</a>. Code licensed under <a href="https://github.com/grim3212/grim-pack/blob/master/LICENSE">CC BY-NC-SA 4.0</a></p>
+
+    <p>&copy; {{year}} Dakota Pierone (Grim3212). Built using <a href="https://angular.io/">Angular</a> and <a href="https://ng-bootstrap.github.io/#/home">Ng-Bootstrap</a>.</p>
   </div>
 </footer>
