--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,39 @@
 .bd-footer {
-  padding: 3rem 0;
-  margin-top: 3rem;
+  padding: 4rem 0;
+  margin-top: 4rem;
   font-size: 85%;
-  background-color: #f7f7f7;
-  text-align: left;
-  p {
-    margin-bottom: 0;
+  text-align: center;
+  background-color: #f7f7f7
+}
+
+.bd-footer a {
+  font-weight: 500;
+  color: #464a4c
+}
+
+.bd-footer a:hover {
+  color: #0275d8
+}
+
+.bd-footer p {
+  margin-bottom: 0
+}
+
+@media (min-width:576px) {
+  .bd-footer {
+    text-align: left
   }
-  a {
-    font-weight: 500;
-    color: #55595c;
-  }
+}
+
+.bd-footer-links {
+  padding-left: 0;
+  margin-bottom: 1rem
+}
+
+.bd-footer-links li {
+  display: inline-block
+}
+
+.bd-footer-links li+li {
+  margin-left: 1rem
 }
